# DeviantBehaviorResearch

./: Anomaly_Test.txt  Anomaly_Train.txt  README.md  compute_metrics.py  dataset_download.sh  evaluate_model.py  evaluate_model.sh  finetune_model.py  pyproject.toml  train.jsonl
configs/: gemma_basic.yaml  gemma_basic_finetune.yaml  gemma_cot.yaml  gemma_fewshot.yaml  gemma_zeroshot.yaml  intern_basic.yaml  intern_cot.yaml  intern_fewshot.yaml  intern_zeroshot.yaml  llava_basic.yaml  llava_cot.yaml  llava_fewshot.yaml  llava_zeroshot.yaml  qwen_basic.yaml  qwen_cot.yaml  qwen_fewshot.yaml  qwen_finetune.yaml  qwen_lora_basic.yaml  qwen_zeroshot.yaml
dataset/: __init__.py  base.py  ucf_crime.py
models/: __init__.py  base.py  gemma.py  internvl.py  llava.py  qwen.py  qwen_adapter.py
prompts/: basic.txt  cot.txt  fewshot.txt  zero_shot.txt
results/: InternVL3-2B_basic_prompt.txt  InternVL3-2B_basic_prompt_lora.txt  InternVL3-2B_cot_2b_lora.txt  InternVL3-2B_cot_2и.txt  InternVL3-2B_fewshot_2B.txt  InternVL3-2B_fewshot_2B_lora.txt  InternVL3-2B_zero_shot_2b.txt  InternVL3-2B_zero_shot_2b_lora.txt  InternVL3-8B_basic_prompt.txt  InternVL3-8B_cot.txt  InternVL3-8B_cot_processed.txt  InternVL3-8B_fewshot.txt  InternVL3-8B_zero_shot.txt  Qwen2.5-VL-3B-Instruct_basic_prompt.txt  Qwen2.5-VL-3B-Instruct_cot_3b.txt  Qwen2.5-VL-3B-Instruct_fewshot_3b.txt  Qwen2.5-VL-3B-Instruct_zero_shot_3b.txt  Qwen2.5-VL-7B-Instruct_basic_prompt.txt  Qwen2.5-VL-7B-Instruct_cot.txt  Qwen2.5-VL-7B-Instruct_fewshot.txt  Qwen2.5-VL-7B-Instruct_zero_shot.txt  Video-LLaVA-7B-hf_basic_prompt.txt  (+12 more)
(+1 files in other folders)
